<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="vm"
        type="me.onething.locationreminder.feature.detail.RemainderDetailViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/padding_small">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/remainder_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/halfCenterGuildLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:padding="@dimen/padding_small"
        android:text="@string/remainder_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/halfCenterGuildLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleValue" />


    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:padding="@dimen/padding_small"
        android:text="@string/remainder_place"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/halfCenterGuildLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionValue" />


    <TextView
        android:id="@+id/latLng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:padding="@dimen/padding_small"
        android:text="@string/remainder_place_latlng"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/halfCenterGuildLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlaceValue" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfCenterGuildLine"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/tvTitleValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@{vm.remainder.title}"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/halfCenterGuildLine"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:padding="@dimen/padding_small"
        android:text="@{vm.remainder.description}"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/halfCenterGuildLine"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleValue" />


    <TextView
        android:id="@+id/tvPlaceValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:padding="@dimen/padding_small"
        android:text="@{vm.remainder.place}"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/black"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/halfCenterGuildLine"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionValue" />


    <TextView
        android:id="@+id/tvLatLngValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:padding="@dimen/padding_small"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/black"
        app:latlng="@{vm.remainder}"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/halfCenterGuildLine"
        app:layout_constraintTop_toBottomOf="@+id/tvPlaceValue" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>